Add gc and jfr profile to compare allocation rates